成功获取到article列表

--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -9,6 +9,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:background="@color/dark_level3"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.xiaxiao.miaowu.activity.home.ItemFragment"
-    tools:listitem="@layout/fragment_item" />
+    tools:listitem="@layout/home_listview_item" />
