搭建完首页bottomtab框架，和首页fragment数据列表

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="" />
+        android:text="toHome"
+        android:onClick="toHome"
+        />
 </LinearLayout>
 </ScrollView>
