--- a/app/src/main/res/layout/bottom_tab_item.xml
+++ b/app/src/main/res/layout/bottom_tab_item.xml
@@ -6,15 +6,15 @@
     >
     <ImageView
         android:id="@+id/bottom_tab_item_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="@dimen/bottom_tab_img_size"
+        android:layout_height="@dimen/bottom_tab_img_size"
         android:scaleType="centerCrop"
         android:src="@drawable/test1"
         />
     <TextView
         android:id="@+id/bottom_tab_item_tv"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="tab1"
         android:textSize="18sp"
         android:layout_weight="1"
