--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="comment_view_btn_width">58dp</dimen>
     <dimen name="comment_view_height">32dp</dimen>
-    <dimen name="bottom_tab_img_size">46dp</dimen>
+    <dimen name="bottom_tab_img_size">32dp</dimen>
+    <dimen name="bottom_tab_height">52dp</dimen>
     <dimen name="dialog_width">360dp</dimen>
     <dimen name="bannerview_dot_size">16dp</dimen>
     <dimen name="user_head_size">48dp</dimen>
