--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xiaxiao.miaowu.customview.BaseActivity"
+    tools:context="com.xiaxiao.riji.customview.BaseActivity"
     >
     <!--<ScrollView
     android:layout_width="match_parent"
