--- a/app/src/main/res/layout/customview_top_bar.xml
+++ b/app/src/main/res/layout/customview_top_bar.xml
@@ -17,6 +17,7 @@
         android:layout_marginLeft="8dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:visibility="gone"
         >
 
         <ImageView
@@ -36,19 +37,19 @@
         android:layout_marginRight="8dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        android:visibility="gone"
         >
 
         <ImageView
             android:id="@+id/right_img"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="#ff0000"
             />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/middle_ll"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/right_ll"
