--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -11,5 +11,5 @@
     android:layout_marginRight="16dp"
     android:background="@color/dark_level3"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.xiaxiao.miaowu.activity.home.ItemFragment"
+    tools:context="com.xiaxiao.riji.activity.home.ItemFragment"
     tools:listitem="@layout/home_listview_item" />
