--- a/app/src/main/res/layout/home_listview_item.xml
+++ b/app/src/main/res/layout/home_listview_item.xml
@@ -7,7 +7,7 @@
     >
 
 
-    <com.xiaxiao.miaowu.customview.roundcorner.RoundCornerImageView
+    <com.xiaxiao.riji.customview.roundcorner.RoundCornerImageView
         android:id="@+id/user_head_img"
         android:layout_width="@dimen/user_head_size"
         android:layout_height="@dimen/user_head_size"
@@ -78,7 +78,7 @@
             android:paddingBottom="16dp"
             android:textColor="@color/dark_level2"
             />
-        <com.xiaxiao.miaowu.customview.roundcorner.RoundCornerImageView
+        <com.xiaxiao.riji.customview.roundcorner.RoundCornerImageView
             android:id="@+id/title_img"
             android:layout_width="@dimen/card_height"
             android:layout_height="@dimen/card_height"
