--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.xiaxiao.miaowu.TestActivity"
+    tools:context="com.xiaxiao.riji.TestActivity"
     >
     <ImageView
         android:id="@+id/img"
