--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="toast_bg">#e1ced4</color>
+    <color name="button_bg">#fa89ba</color>
 
     <color name="main_theme_color">#FC6450</color>
     <color name="second_theme_color">#57A8DC</color>
